--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #3682f7;
+      background-color: #0969A3;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
@@ -48,6 +48,11 @@
     <div class="description">
       Synthetic events for Dojo
     </div>
+
+	<h2>Demos</h2>
+	<ul>
+		<li><a href="mouse.html">Mouse events</a></li>
+	</ul>
 
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/bryanforbes/eventd">bryanforbes/eventd</a>
