--- a/mouse.html
+++ b/mouse.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mouse Demos</title>
+	<style>
+		#output {
+			width: 400px;
+			height: 200px;
+		}
+	</style>
 	<script>
 		var dojoConfig = {
 			async: true,
@@ -15,17 +21,56 @@
 	</script>
 	<script src="dojo/dojo.js"></script>
 	<script>
-		require(['dojo', 'eventd/mouse'], function(dojo, mouse){
-			mouse.click(dojo.byId("chk1")).then.delay(function(){
-				mouse.click(dojo.byId("chk2")).then.delay(function(){
-					mouse.click(dojo.byId("chk1"));
+		require(['dojo', 'dojo/listen', 'eventd/mouse'], function(dojo, listen, mouse){
+			var logIt = (function(){
+				var output = dojo.byId("output");
+
+				return function(){
+					var str = "";
+
+					for(var i=0, l=arguments.length; i<l; i++){
+						if(i>0){
+							str += " ";
+						}
+						str += arguments[i] + "";
+					}
+
+					output.innerHTML += "\r\n" + str;
+					output.scrollTop = output.scrollHeight;
+				};
+			})();
+
+			function listenMouseEvents(id){
+				var node = dojo.byId(id);
+				listen(node, "mousedown", function(evt){
+					logIt(id, "mousedown", evt);
+				});
+				listen(node, "mouseup", function(evt){
+					logIt(id, "mouseup", evt);
+				});
+				listen(node, "click", function(evt){
+					logIt(id, "click", evt);
+				});
+			}
+
+			listenMouseEvents("chk1");
+			listenMouseEvents("chk2");
+
+			mouse.click("chk1").then.delay(function(){
+				mouse.click("chk2").then.delay(function(){
+					mouse.click("chk1");
 				},1000);
 			},1000);
 		});
 	</script>
 </head>
 <body>
-	<input id="chk1" type="checkbox" />
-	<input id="chk2" type="checkbox" />
+	<input id="chk1" type="checkbox">
+	<input id="chk2" type="checkbox">
+
+	<div>
+		Output:<br>
+		<textarea id="output"></textarea>
+	</div>
 </body>
 </html>
