Updated title of mouse demo page.

--- a/mouse.html
+++ b/mouse.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Mouse Demos</title>
+	<title>Mouse Event Demos</title>
 	<style>
 		#output {
 			width: 400px;
