--- a/index.html
+++ b/index.html
@@ -1,65 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
+	<meta charset='utf-8'>
 
-  <title>bryanforbes/eventd @ GitHub</title>
+	<title>bryanforbes/eventd @ GitHub</title>
 
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #0969A3;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #c97d08; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #c97d08; }
-    h3 { text-align: center; color: #c97d08; }
-    a { color: #c97d08; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+	<style type="text/css">
+		body {
+			margin-top: 1.0em;
+			background-color: #0969A3;
+			font-family: Helvetica, Arial, FreeSans, san-serif;
+			color: #000000;
+		}
+		#container {
+			margin: 0 auto;
+			width: 700px;
+		}
+		h1 { font-size: 3.8em; color: #c97d08; margin-bottom: 3px; }
+		h1 .small { font-size: 0.4em; }
+		h1 a { text-decoration: none }
+		h2 { font-size: 1.5em; color: #c97d08; }
+		h3 { text-align: center; color: #c97d08; }
+		a { color: #c97d08; }
+		.description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+		.download { float: right; }
+		pre { background: #000; color: #fff; padding: 15px;}
+		hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
+		.footer { text-align:center; padding-top:30px; font-style: italic; }
+	</style>
 </head>
 
 <body>
-  <a href="http://github.com/bryanforbes/eventd"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+	<a href="http://github.com/bryanforbes/eventd"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
-  <div id="container">
+	<div id="container">
+		<div class="download">
+			<a href="http://github.com/bryanforbes/eventd/zipball/master"><img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+			<a href="http://github.com/bryanforbes/eventd/tarball/master"><img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+		</div>
 
-    <div class="download">
-      <a href="http://github.com/bryanforbes/eventd/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/bryanforbes/eventd/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
+		<h1><a href="http://github.com/bryanforbes/eventd">eventd</a> <span class="small">by <a href="http://github.com/bryanforbes">bryanforbes</a></span></h1>
 
-    <h1><a href="http://github.com/bryanforbes/eventd">eventd</a>
-      <span class="small">by <a href="http://github.com/bryanforbes">bryanforbes</a></span></h1>
+		<div class="description">Synthetic events for Dojo</div>
 
-    <div class="description">
-      Synthetic events for Dojo
-    </div>
+		<h2>Demos</h2>
+		<ul>
+			<li><a href="mouse.html">Mouse events</a></li>
+			<li><a href="keyboard.html">Keyboard events</a></li>
+		</ul>
 
-	<h2>Demos</h2>
-	<ul>
-		<li><a href="mouse.html">Mouse events</a></li>
-	</ul>
+		<div class="footer">get the source code on GitHub : <a href="http://github.com/bryanforbes/eventd">bryanforbes/eventd</a></div>
 
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/bryanforbes/eventd">bryanforbes/eventd</a>
-    </div>
-
-  </div>
-
-  
+	</div>
 </body>
 </html>
