Updated keyboard demo to remove delay between for default.

--- a/keyboard.html
+++ b/keyboard.html
@@ -62,7 +62,7 @@
 			listenMouseEvents("txt");
 
 			mouse.click("txt").then.delay(function(){
-				keyboard.keystrokes("txt", "Bryan Forbes", 50);
+				keyboard.keystrokes("txt", "Bryan Forbes");
 			},1000);
 		});
 	</script>
