Updated for latest 1.7 trunk.

--- a/tests/mouse.html
+++ b/tests/mouse.html
@@ -29,33 +29,33 @@
 		<div id="container2" style="width: 100px; height: 100px; border: 1px solid blue;"></div>
 	</div>
 	<script>
-		require(['dojo', 'dojo/on', 'eventd', 'eventd/mouse'], function(dojo, on, eventd, mouse){
-			/*on(dojo.byId("container"), "mousemove", function(evt){
+		require(['eventd/mouse', 'dojo/on', 'dojo/dom/dom', 'dojo/dom/class', 'dojo/_base/window'], function(mouse, on, dom, cls, win){
+			/*on(dom.byId("container"), "mousemove", function(evt){
 				console.log("Move", evt);
 			});*/
-			on(dojo.body(), "mouseover", function(evt){
+			on(win.body(), "mouseover", function(evt){
 				console.log("Over", evt.target);
-				dojo.addClass(evt.target, "over");
+				cls.add(evt.target, "over");
 			});
-			on(dojo.body(), "mouseout", function(evt){
+			on(win.body(), "mouseout", function(evt){
 				console.log("Out", evt.target);
-				dojo.removeClass(evt.target, "over");
+				cls.remove(evt.target, "over");
 			});
-			on(dojo.byId("container"), "mouseenter", function(evt){
+			on(dom.byId("container"), "mouseenter", function(evt){
 				console.log("Enter", evt.target);
 			});
-			on(dojo.byId("container"), "mouseleave", function(evt){
+			on(dom.byId("container"), "mouseleave", function(evt){
 				console.log("Leave", evt.target);
 			});
-			on(dojo.byId("container"), "mousemove", function(evt){
+			on(dom.byId("container"), "mousemove", function(evt){
 				console.log("Move", evt.target);
 			});
 
-			dojo.byId("cbx").checked = false;
+			dom.byId("cbx").checked = false;
 
 			setTimeout(function(){
-				mouse.click(dojo.byId("cbx")).then.delay(function(){
-					mouse.click(dojo.byId("cbx")).then(function(){
+				mouse.click(dom.byId("cbx")).then.delay(function(){
+					mouse.click(dom.byId("cbx")).then(function(){
 						mouse.move(300, 300, 2000, true);
 					});
 				},1000);
