--- a/tests/keyboard.html
+++ b/tests/keyboard.html
@@ -22,9 +22,9 @@
 	<script src="dojo/dojo/dojo.js"></script>
 	<script>
 		var key;
-		require(['eventd/mouse', 'eventd/keyboard'], function(mouse, keyboard){
+		require(['eventd/mouse', 'eventd/keyboard', 'dojo/dom/dom'], function(mouse, keyboard, dom){
 			key = keyboard;
-			dojo.byId("txt").value = "";
+			dom.byId("txt").value = "";
 			setTimeout(function(){
 				mouse.click("txt").then.delay(function(){
 					keyboard.keystrokes("txt", "Bryan Forbes\r\b\r").then.delay(function(){
@@ -36,9 +36,9 @@
 			},500);
 		});
 
-		require(['dojo', 'dojo/on'], function(dojo, on){
-			dojo.forEach(["keydown", "keypress", "keyup", "change", "textInput", "input"], function(type){
-				on(dojo.byId("txt"), type, function(evt){
+		require(['dojo', 'dojo/on', 'dojo/_base/array', 'dojo/dom/dom'], function(dojo, on, array, dom){
+			array.forEach(["keydown", "keypress", "keyup", "change", "textInput", "input"], function(type){
+				on(dom.byId("txt"), type, function(evt){
 					console.log(evt.type, evt.keyCode, evt.charCode);
 				});
 			});
