--- a/tests/test.html
+++ b/tests/test.html
@@ -15,9 +15,9 @@
 	</script>
 	<script src="dojo/dojo/dojo.js"></script>
 	<script>
-		require(['eventd/mouse', 'eventd/keyboard'], function(mouse, keyboard){
-			dojo.byId("cbx").checked = false;
-			dojo.byId("txt").value = "";
+		require(['eventd/mouse', 'eventd/keyboard', 'dojo/dom/dom'], function(mouse, keyboard){
+			dom.byId("cbx").checked = false;
+			dom.byId("txt").value = "";
 			setTimeout(function(){
 				mouse.click("cbx").then.delay(function(){
 					mouse.click("txt").then.delay(function(){
@@ -27,14 +27,14 @@
 			},500);
 		});
 
-		require(['dojo', 'dojo/on'], function(dojo, on){
-			on(dojo.byId("container"), "mousemove", function(evt){
+		require(['dojo/on', 'dojo/dom/dom'], function(on, dom){
+			on(dom.byId("container"), "mousemove", function(evt){
 				console.log(evt);
 			});
-			on(dojo.byId("txt"), "keypress", function(evt){
+			on(dom.byId("txt"), "keypress", function(evt){
 				console.log(evt);
 			});
-			on(dojo.byId("txt"), "change", function(evt){
+			on(dom.byId("txt"), "change", function(evt){
 				console.log(evt);
 			});
 		});
