--- a/tests/test.html
+++ b/tests/test.html
@@ -15,7 +15,7 @@
 	</script>
 	<script src="dojo/dojo/dojo.js"></script>
 	<script>
-		require(['eventd/mouse', 'eventd/keyboard', 'dojo/dom/dom'], function(mouse, keyboard){
+		require(['eventd/mouse', 'eventd/keyboard', 'dojo/dom/dom'], function(mouse, keyboard, dom){
 			dom.byId("cbx").checked = false;
 			dom.byId("txt").value = "";
 			setTimeout(function(){
