--- a/tests/mouse.html
+++ b/tests/mouse.html
@@ -29,7 +29,7 @@
 		<div id="container2" style="width: 100px; height: 100px; border: 1px solid blue;"></div>
 	</div>
 	<script>
-		require(['eventd/mouse', 'dojo/on', 'dojo/dom/dom', 'dojo/dom/class', 'dojo/_base/window'], function(mouse, on, dom, cls, win){
+		require(['eventd/mouse', 'dojo/on', 'dojo/dom', 'dojo/dom-class', 'dojo/_base/window'], function(mouse, on, dom, cls, win){
 			/*on(dom.byId("container"), "mousemove", function(evt){
 				console.log("Move", evt);
 			});*/
