--- a/tests/test.html
+++ b/tests/test.html
@@ -15,7 +15,7 @@
 	</script>
 	<script src="dojo/dojo/dojo.js"></script>
 	<script>
-		require(['eventd/mouse', 'eventd/keyboard', 'dojo/dom/dom'], function(mouse, keyboard, dom){
+		require(['eventd/mouse', 'eventd/keyboard', 'dojo/dom'], function(mouse, keyboard, dom){
 			dom.byId("cbx").checked = false;
 			dom.byId("txt").value = "";
 			setTimeout(function(){
@@ -27,7 +27,7 @@
 			},500);
 		});
 
-		require(['dojo/on', 'dojo/dom/dom'], function(on, dom){
+		require(['dojo/on', 'dojo/dom'], function(on, dom){
 			on(dom.byId("container"), "mousemove", function(evt){
 				console.log(evt);
 			});
