--- a/keyboard.html
+++ b/keyboard.html
@@ -16,6 +16,11 @@
 				name: 'eventd',
 				location: '../eventd',
 				lib: '.'
+			},{
+				name: 'compose',
+				location: '../compose',
+				main: 'compose',
+				lib: '.'
 			}]
 		};
 	</script>
@@ -66,7 +71,7 @@
 
 			onKeyEvents("txt");
 
-			mouse.click("txt").then.delay(function(){
+			mouse.click("txt").delay(1000).then(function(){
 				keyboard.keystrokes("txt", "Bryan Forbes");
 			},1000);
 		});
