--- a/tests/mouse.html
+++ b/tests/mouse.html
@@ -11,12 +11,7 @@
 			background-color: red;
 		}
 	</style>
-	<script>
-		var dojoConfig = {
-			async: true
-		};
-	</script>
-	<script src="../../dojo/dojo.js"></script>
+	<script src="../../dojo/dojo.js" data-dojo-config="async: true"></script>
 </head>
 <body>
 	<input id="cbx" type="checkbox" />
